# travel

./: README.md  TRAVEL_GRAPH_OPTIMIZATION.md  Test strategy.py  main.py  pyproject.toml  utils.py
agents/: chat_agent.py  communication_agent.py  information_agent.py  recommend_agent.py  route_agent.py  strategy_agent.py
frontend/static/css/: styles.css
frontend/static/js/: main.js
frontend/templates/: index.html
services/: car_rental_api.py  fuel_price_api.py  places_api.py  weather_api.py
workflows/: evaluation.py  travel_graph.py
